--- a/package.json
+++ b/package.json
@@ -6,20 +6,22 @@
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint",
+    "lint": "next lint . --fix",
     "format": "prettier --write ."
   },
   "dependencies": {
+    "next": "15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
-    "react-dom": "19.0.0-rc-65a56d0e-20241020",
-    "next": "15.0.0"
+    "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
   "devDependencies": {
+    "eslint-plugin-prettier": "^5.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
+    "eslint-config-prettier": "^9.1.0",
     "prettier": "^3.3.3",
     "typescript": "^5"
   },
