--- a/package.json
+++ b/package.json
@@ -1,13 +1,15 @@
 {
   "name": "nextjs-with-bun",
   "version": "0.1.0",
+  "type": "module",
   "private": true,
   "scripts": {
     "dev": "next dev --turbo",
     "build": "next build",
     "start": "next start",
     "lint": "next lint . --fix",
-    "format": "prettier --write ."
+    "format": "prettier --write .",
+    "stylelint": "stylelint \"**/*.{css}\" --fix"
   },
   "dependencies": {
     "next": "15.0.0",
@@ -15,14 +17,17 @@
     "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
   "devDependencies": {
-    "eslint-plugin-prettier": "^5.2.1",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "eslint-config-prettier": "^9.1.0",
+    "eslint-plugin-prettier": "^5.2.1",
     "prettier": "^3.3.3",
+    "stylelint": "^16.10.0",
+    "stylelint-config-standard": "^36.0.1",
+    "stylelint-order": "^6.0.4",
     "typescript": "^5"
   },
   "packageManager": "yarn@1.22.21+sha1.1959a18351b811cdeedbd484a8f86c3cc3bbaf72"
